# src/main/resources/openapi.yaml
@@ -135,7 +135,21 @@ paths:
 components:
   schemas:
     ExchangeRateRequest:
-      $ref: "#/components/schemas/ExchangeRate"
+      type: object
+      properties:
+        baseCurrency:
+          type: string
+          description: Moneda Origen
+          example: "USD"
+        exchangeCurrency:
+          type: string
+          description: Código de Moneda.
+          example: "PEN"
+        rateAmount:
+          type: number
+          format: double
+          description: Tipo de cambio de la moneda.
+          example: 20.41006
     ExchangeRate:
       type: object
       properties:
